Fix horizontal scroll. Fix fill on tooltip trigger

--- a/components/tabs-divider/tabs-divider.css
+++ b/components/tabs-divider/tabs-divider.css
@@ -1,5 +1,5 @@
 .tabs-divider {
-  width: 100vw;
+  width: 100%;
   height: 1px;
   background-color: var(--grey-2);
 }
